--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   email_validator: ^2.0.1
+  fhir: ^0.6.2
   fhir_yaml: ^0.6.1
   freezed_annotation: ^1.1.0
   json_annotation: ^4.4.0
